style: fix content overlap with date

--- a/src/components/App/assets/style.css
+++ b/src/components/App/assets/style.css
@@ -1478,7 +1478,7 @@ End Our Team Area CSS
 }
 .news-details .post-content {
   padding: 0 30px 30px;
-  margin-top: -60px;
+  margin-top: -20px;
   z-index: 9999;
   position: relative;
 }
